--- a/StudentPortal/Views/StudentController1/Add.cshtml
+++ b/StudentPortal/Views/StudentController1/Add.cshtml
@@ -10,3 +10,22 @@
 <label class="form-label">Name</label>
 <input type="text" class="form-control"/> 
 </div>
+
+<div class="mt-3">
+    <label class="form-label">Email</label>
+    <input type="Email" class="form-control" />
+</div>
+
+<div class="mt-3">
+    <label class="form-label">Phone</label>
+    <input type="text" class="form-control" />
+</div>
+
+<div class="mt-3">
+    <input type="Checkbox" class="form-check-input"  id="subscribed"/>
+    <label class="form-check-label" for="Subscribed">Subscribed</label>    
+</div>
+
+<div class="mt-3">
+  <button type="Submit" class="btn btn-primary">Save</button>
+</div>
