--- a/StudentPortal/Views/Student/Add.cshtml
+++ b/StudentPortal/Views/Student/Add.cshtml
@@ -4,27 +4,33 @@
 @{
 }
 
+@model StudentPortal.Models.AddStudentViewModel
+
+<form method="post">
 <h1>Add Student</h1>
 <div class="mt-3">
     <label class="form-label">Name</label>
-    <input type="text" class="form-control" />
+    <input type="text" class="form-control" asp-for="Name" />
 </div>
 
 <div class="mt-3">
     <label class="form-label">Email</label>
-    <input type="Email" class="form-control" />
+    <input type="Email" class="form-control" asp-for="Email" />
 </div>
 
 <div class="mt-3">
     <label class="form-label">Phone</label>
-    <input type="text" class="form-control" />
+    <input type="text" class="form-control" asp-for="Phone" />
 </div>
 
 <div class="mt-3">
-    <input type="Checkbox" class="form-check-input" id="subscribed" />
+    <input type="Checkbox" class="form-check-input" id="subscribed" asp-for="Subscribed" />
     <label class="form-check-label" for="Subscribed">Subscribed</label>
 </div>
 
 <div class="mt-3">
     <button type="Submit" class="btn btn-primary">Save</button>
 </div>
+
+    
+</form>
