--- a/StudentPortal/Views/Student/Delete.cshtml
+++ b/StudentPortal/Views/Student/Delete.cshtml
@@ -1,22 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model StudentPortal.Models.Entities.Student
 
-@model StudentPortal.Models.Entities.Student
+@{
+    ViewData["Title"] = "Delete Student";
+}
 
 <h2>Delete Student</h2>
 
-<div>
-    <h4>Are you sure you want to delete this student?</h4>
-    <p><strong>Name:</strong> @Model.Name</p>
-    <p><strong>Email:</strong> @Model.Email</p>
+<div class="alert alert-warning">
+    <p>Are you sure you want to delete this student?</p>
 </div>
 
-<form method="post">
-    <input type="hidden" asp-for="Id" />
-    <button type="submit">Delete</button>
-    <a asp-action="List">Cancel</a>
-</form>
+<dl class="row">
+    <dt class="col-sm-2">Name</dt>
+    <dd class="col-sm-10">@Model.Name</dd>
 
+    <dt class="col-sm-2">Email</dt>
+    <dd class="col-sm-10">@Model.Email</dd>
+
+    <dt class="col-sm-2">Phone</dt>
+    <dd class="col-sm-10">@Model.Phone</dd>
+
+    <dt class="col-sm-2">Subscribed</dt>
+    <dd class="col-sm-10">@Model.Subscribed</dd>
+</dl>
+
+<form asp-action="Delete" asp-route-id="@Model.Id" method="post">
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-action="List" class="btn btn-secondary">Cancel</a>
+</form>
