--- a/StudentPortal/Views/Student/List.cshtml
+++ b/StudentPortal/Views/Student/List.cshtml
@@ -1,17 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<StudentPortal.Models.Entities.Student>
+
 @{
+    ViewData["Title"] = "Student List";
 }
-@model List<StudentPortal.Models.Entities.Student>
+
 <h1>Student</h1>
-<table>
+
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>Id</th>
             <th>Name</th>
             <th>Email</th>
-            <th></th>
+            <th>Phone</th>
+            <th>Subscribed</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -21,8 +24,11 @@
                 <td>@student.Id</td>
                 <td>@student.Name</td>
                 <td>@student.Email</td>
+                <td>@student.Phone</td>
+                <td>@(student.Subscribed ? "Yes" : "No")</td>
                 <td>
-                  
+                    <a asp-controller="Student" asp-action="Edit" asp-route-id="@student.Id" class="btn btn-warning btn-sm">Edit</a>
+                    <a asp-controller="Student" asp-action="Delete" asp-route-id="@student.Id" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
         }
